ルール化実装
